# rgcs

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_PHILOSOPHY.md  FAQ.md  HUMANITY_COMMONS_CHARTER.md  LICENSE  LICENSE_MAP.md  NON_CLAIMS.md  PATENT_NON_ASSERTION_INTENT.md  README.md  RESEARCH_HISTORY.md  SCIENTIFIC_BOUNDARIES.md  SECURITY.md  SUPPORT.md  model_playground.py  pyproject.toml
consciousness_lane/: __init__.py  reduced_models.py  theory_registry.py
cspc/: __init__.py  coordinates.py  corpus.py  dds.py  exact.py  experiments.py  nulls.py  provenance.py  rf_safety.py  spacetime.py  tetra.py  units.py
docs/: ACCEPTANCE_CRITERIA.md  ADAPTATION_MATRIX.md  AGENT_03_HANDOFF.md  AGENT_06_HANDOFF.md  AGENT_07_HANDOFF.md  AGENT_08_HANDOFF.md  AGENT_09_HANDOFF.md  ARCHITECTURE.md  ASSUMPTIONS.md  BENCH_HARDWARE.md  CALIBRATION_GUIDE.md  CANONICAL_110MM_CASE_STUDY.md  CLAIM_AUDIT.md  CLAIM_AUDIT_V3.md  CLAIM_REGISTER.md  COHERENCE_METRICS.md  COHERENCE_TEST_MATRIX.md  COIL_LASER_TIMING_AND_PHASE.md  CONCEPT_EXTRACTION.md  CONTRIBUTOR_ROADMAP.md  CORE_API_SPEC.md  DATA_PIPELINE.md  DATA_SCHEMA.md  DECISION_LOG.md  DEFECT_REGISTER.md  DESKTOP_ARCHITECTURE.md  DESKTOP_PRODUCT_SPEC.md  DIMENSIONAL_ANALYSIS.md  DOI_RELEASE_GUIDE.md  DYNAMIC_COHERENCE_SPEC.md  EXCLUSION_MATRIX.md  EXPERIMENTAL_PROGRAMME.md  EXPERIMENT_PROTOCOL.md  EYE_METHODOLOGY.md  FINAL_PUBLICATION_REPORT.md  GITHUB_PUBLICATION_REPORT.md  HG_RSCS_MEMORY_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  INCONSISTENCY_REGISTER.md  LAB_MANUAL.md  (+49 more)
embedded/: HG_EMBEDDED_OS_CONTRACT.md  app_manifest.schema.json
fkey_instrument/: __init__.py  boards.py  contracts.py  crystal_mode.py  device.py  optimizer.py  phase_closure.py  plant.py  relations.py  spectrum.py
manuscript/: LAYOUT_QA_REPORT.md  README.md  references.bib  rgcs_v2.aux  rgcs_v2.bbl  rgcs_v2.blg  rgcs_v2.fdb_latexmk  rgcs_v2.fls  rgcs_v2.out  rgcs_v2.tex  rgcs_v2.toc  rgcs_v2.xdv
packaging/: RGCSWorkbench.spec  RGCS_Workbench.iss  workbench_entry.py
pmwr/: __init__.py  benches.py  crystal.py  ingest.py  phase_authority.py  recovery.py  signal_state.py  worldline.py
proof_bundle_110mm/: INPUT_MANIFEST.json  PROVENANCE.json  README.md  SHA256SUMS.txt  SOFTWARE_VERSIONS.json  VERDICT.json
r10/: __init__.py  base10.py  breach.py  characterize.py  chronology.py  claimfirewall.py  codecbind.py  continuity.py  crystalmem.py  cue1604.py  cwarith.py  cwcodec2.py  cwontology.py  density.py  emisurvey.py  energyledger.py  envlog.py  extcompare.py  firewall.py  handshake.py  hcm.py  inverse.py  memhandshake.py  microcrystal.py  multiframe.py  natsynth.py  naturalsource.py  nlinverse.py  nlo.py  nodes.py  nolookahead.py  numcue.py  pcemi.py  phaseconj.py  phaseframes.py  polarity.py  priorart.py  prospective.py  quartzhistory.py  received.py  (+12 more)
r11/: __init__.py  anglerecon.py  atomicarch.py  carrier.py  detectors.py  dynboundary.py  earthface.py  energyledger.py  exacttiming.py  geominverse.py  identifiability.py  isotope.py  marspilot.py  mechboundary.py  modemix.py  n7geom.py  numcorpus.py  orbitalscaling.py  phasealpha.py  photonadapter.py  picorrection.py  planetroot.py  rotfield.py  rotor.py  shelladdr.py  sources.py
r12/: __init__.py  bodylock.py  bridge.py  epochcand.py  homelab.py  icosapacket.py  icosarefine.py  igrf14root.py  reciprocal.py  shells8.py
r3/: __init__.py  address.py  atlas.py  hal_memory.py  lens.py  optical_spin.py  root_space.py  spin_torsion.py
r4/: __init__.py  bench.py  benchmark.py  codec.py  hal_adapter.py  platforms.py  quantizer.py  radix.py  spin_twin.py
r6/: __init__.py  bench.py  carrier.py  chirality.py  claims.py  controls.py  drive.py  grid.py  helix.py  instrument.py  mailbox.py  navigation.py  protocol.py  pulse.py  wigner.py  witness.py
r7/: __init__.py  alignment.py  benchr7.py  clocklink.py  cw.py  excitation.py  gravity.py  legacy.py  vectorfield.py
r8/: __init__.py  dds.py  framemem.py  measurement.py  nullcal.py  ranging.py
r9/: __init__.py  betadecay.py  carrier.py  cwdecode.py  octave.py  vortex.py
references/: equation_provenance.yaml  references.bib  source_registry.yaml
release/: PROVENANCE.json  RELEASE_NOTES.md  SHA256SUMS.txt  test_report.md
resonator_platform/: __init__.py  additive.py  campaign.py  certificate.py  composite_modes.py  daq.py  design_trim.py  fixture.py  mems.py  oscillator.py  records.py  safety.py  stats.py  trim_control.py  tuning.py  twin.py
rgcs_core/: __init__.py  crystal_db.py  fea_export.py  uncertainty.py
rgcs_desktop/: __init__.py  __main__.py  build_meta.py
rgcs_workbench/: __init__.py  canonical.py  r6_lane.py  r7_lane.py  workbook.py
rscs2_core/: __init__.py  accel.py  apparatus.py  bvd.py  calibration.py  chiral_phonon.py  circulation.py  cli.py  crystal110.py  curves.py  cymatic_disk.py  dynamic_boundary.py  eye.py  eye_ladder_analysis.py  eye_refinement.py  eye_votes.py  fem.py  frequency_keys.py  harmonic_family.py  interfaces_future.py  metrology.py  optical_am.py  optics_channels.py  piezo.py  projections.py  proofbundle.py  protocols_v4x.py  provenance_v4.py  quantity_registry.py  quartz.py  reference.py  refsystems.py  research_records.py  spiral_cone.py  torsion_mech.py
rscs_core/: __init__.py  units.py
scad/: README.md  rgcs_v2_compact_spiral_resonator.scad  vogel_parametric_crystal_models_v6_RGCS_v2.scad  (+1 more)
(+909 files in other folders)
