[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rgcs"
version = "4.1.0"
description = "RGCS v4.1 / RSCS 2.0: typed resonant-coordinate framework (rscs_core), the deterministic RGCS crystal-application core (rgcs_core), and the capability-aware v4 multiphysics stack (rscs2_core: anisotropic FEM, piezoelectricity, projections, uncertainty-aware Eye Consensus, reduced-order reference systems, quarantined source hypotheses, proof bundles)."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Andrew Green", email = "me@andrewgreen.ca" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
desktop = ["PySide6>=6.6", "pyqtgraph>=0.13"]
dev = [
    "pytest>=7.4",
    "hypothesis>=6.90",
    "pytest-qt>=4.2",
    # MIG-CODE-07: schema validation deps were imported but undeclared
    # (V2-PKG-01 family); experiments/schemas/validate.py needs both.
    "jsonschema>=4.21",
    "referencing>=0.33",
]

[project.scripts]
rgcs-v4 = "rscs2_core.cli:main"

[tool.setuptools.packages.find]
include = ["rgcs_core*", "rgcs_desktop*", "rscs_core*", "rscs2_core*"]

[tool.setuptools.package-data]
rscs_core = ["registry/*.yaml"]
rscs2_core = ["registry/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/property", "tests/golden", "tests/regression", "tests/ui", "tests/integration", "tests/adversarial", "tests/v4"]
pythonpath = ["."]
markers = [
    "slow: long-running tests (dataset regeneration)",
    "benchmark: non-gating performance checks",
]
