[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rgcs"
version = "5.6.0"
description = "RGCS v4.1 / RSCS 2.0: typed resonant-coordinate framework (rscs_core), the deterministic RGCS crystal-application core (rgcs_core), and the capability-aware v4 multiphysics stack (rscs2_core: anisotropic FEM, piezoelectricity, projections, uncertainty-aware Eye Consensus, reduced-order reference systems, quarantined source hypotheses, proof bundles)."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Andrew Green", email = "me@andrewgreen.ca" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
desktop = ["PySide6>=6.6", "pyqtgraph>=0.13"]
workbook = ["openpyxl>=3.1"]           # xlsx export (interop only;
#                                        Excel not required to RUN)
packaging = ["pyinstaller>=6.0"]       # Windows portable/onedir build
dev = [
    "pytest>=7.4",
    "hypothesis>=6.90",
    "pytest-qt>=4.2",
    # MIG-CODE-07: schema validation deps were imported but undeclared
    # (V2-PKG-01 family); experiments/schemas/validate.py needs both.
    "jsonschema>=4.21",
    "referencing>=0.33",
    # R9-D-020: tests/v52/test_r9_packaging.py compares SOURCE_ROOTS
    # against setuptools package discovery. setuptools is a
    # build-system requirement and is NOT present in CI's portable
    # job, so that module failed to collect on every platform while
    # passing locally. Declared here so the guard actually runs.
    "setuptools>=68",
]

[project.scripts]
rgcs-v4 = "rscs2_core.cli:main"
rgcs-workbook = "rgcs_workbench.workbook:main"

[project.gui-scripts]
rgcs-workbench = "rgcs_desktop.app.main:main"

[tool.setuptools.packages.find]
include = ["rgcs_core*", "rgcs_desktop*", "rscs_core*", "rscs2_core*", "cspc*", "pmwr*", "r3*", "r4*",
           "r6*", "r7*", "r8*", "r9*", "r10*",
           "rgcs_workbench*", "fkey_instrument*",
           "resonator_platform*", "consciousness_lane*"]

[tool.setuptools.package-data]
rscs_core = ["registry/*.yaml"]
rscs2_core = ["registry/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/property", "tests/golden", "tests/regression", "tests/ui", "tests/integration", "tests/adversarial", "tests/v4", "tests/v49", "tests/v50", "tests/v51", "tests/v52"]
pythonpath = ["."]
markers = [
    "slow: long-running tests (dataset regeneration)",
    "benchmark: non-gating performance checks",
]
